--- a/.github/workflows/ghcr.yml
+++ b/.github/workflows/ghcr.yml
@@ -18,7 +18,7 @@ on:
   workflow_dispatch:
   schedule:
     # Run daily at midnight UTC
-    - cron: '0 0 * * *'
+    # - cron: '0 0 * * *'
 
 jobs:
   mirror:
